--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
            <li class="cabecalho-lista-item"><a href="#comidas">Comidas</a></li>
            <li class="cabecalho-lista-item"><a href="#livros">Livros</a></li>
            <li class="cabecalho-lista-item"><a href="#sinopse">Sinopse</a></li>
+           <li class="cabecalho-lista-item"><a href="#cupons">Cupons</a></li>
+           <li class="cabecalho-lista-item"><a href="#localização">Localização</a></li>
         </div>
     </header>
    <section id="bebidas">
@@ -209,6 +211,31 @@
 </div>
 </div>
 </section>
+
+<section  id="cupons">
+    <h2 class="livros-título">Cupons</h2>
+    <div class="cupons">
+
+<div class="livros-edgar">
+    <p class="textogii">10 reais em compra acima de 3 itens</p>
+</div>
+<div class="livros-o-mar">
+    <p class="textogii">Desconto de 5% em compras acima de R$ 5,00</p>
+</div><div class="livros-edgar">
+    <p class="textogii">Em sua primeira compra, ganhe um brinde</p>
+</div>
+</div>
+</div>
+</section>
+
+<section id="localização">
+    <h2 class="livros-título">Localização</h2>
+<div class="localização">
+    <h3 class="bebidas-nome">Avenida do Batel, 1647 - Batel, Curitiba</h3>
+    <p class="textogii">https://maps.app.goo.gl/jgDf8Y47v177gdKJA</p>
+</div>
+</section>
+
 
    <footer class="rodapé">
     <img class="rodapé-imagem" src="logo1.jpg" alt="logo da cafeteria bookoffee">
